# oiftc

./: .gitignore  .~lock.gdd.odg#  CMakeLists.txt  README.md  gdd.md  gdd.odg  imgui.ini
assets/: Cat-6-Run.tsj  Terrain (16x16).tsx  cats.json  cats.tsj  cats.tsx  industrial  industrial.v2.tsj  kenney.tiled-session  mpchar.tsj  player.tsj  pqa.tmj  pqa2.tmj  tilemap_all.tsj  tilemap_all.tsx
assets/Sprites/: playeraction.ase
assets/UI/: GUI.ase  button.ase
assets/sprites/: player.ase  playeraction-broom.ase  playeraction-mop.ase  playeraction.ase  playeraction.json  playerholding.ase  testplayer.ase
data/: assets  button.tsj  gdb-keyboard-2.tsj  keyicon.tsv  menu1.tmj  messes.tsv  messscore  object.tsv  player.tsj  playeraction.tsj  tileobject.tsv  tileset.tsj  tutorial.tmj
docs/gdd/journals/: 2024_11_19.md  2024_11_20.md  2024_11_21.md  2024_11_22.md  2024_11_23.md  2024_11_24.md  2024_11_25.md
docs/gdd/logseq/: config.edn  custom.css
docs/gdd/pages/: Design Pillars.md  Development Roadmap.md  Devlog.md  Gameplay.md  Genre.md  Interactions.md  Interactions___Messes and Tools.md  Inventory.md  Items.md  Level loading.md  Level.md  Messes.md  Oops, I Forgot To Clean!.md  PT_1.md  Platform.md  Player Movement.md  Playtest Feedback.md  Rules.md  Scoring.md  Theme.md  (+10 more)
mg/: CMakeLists.txt
mg/include/: MG.hpp
src/: camera.lua  draw.lua  geometry.lua  idp.cpp  interaction.hpp  inventory.hpp  level.hpp  main.cpp  main.lua  map.lua  mess.hpp  minigame.hpp  mqa.cpp  mqa.hpp  object.hpp  oiftc.cpp  oiftc.hpp  player.hpp  score.hpp  tiled.lua
src/libs/: helper.lua
(+17 files in other folders)
